--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,248 +10,115 @@ body {
 }
 
 .topnav {
-  position: relative;
-  z-index: 1;
-  font-size: 13px;
-  font-weight: 500;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  overflow: hidden;
 }
 
-.topnav .topnav_logo {
-  width: 212px;
-  height: 30px;
+.topnav a {
+  float: right;
+  display: block;
+  color: #D6CFD1;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
 }
 
-.topnav .topnav_logo img {
-  max-width: 100%;
+.topnav a:hover {
+  color: #000;
 }
 
-.topnav_links .nav_drop {
+.topnav .active {
+  color: #000;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;
   border: none;
   outline: none;
-  background-color: #fff;
-  font-size: 20px;
-  color: #6b6b6b;
-  display: none;
+  color: #D6CFD1;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 }
 
-.topnav_links .dropdown,
-.topnav_links .search_icon,
-.topnav_links .basket {
-  padding: 50px 25px;
-  display: inline-block;
-}
-
-.topnav_links .dropdown a,
-.topnav_links .search_icon a,
-.topnav_links .basket a {
-  text-decoration: none;
-  color: #6b6b6b;
-}
-
-.topnav_links .search_icon,
-.topnav_links .basket {
-  font-size: 16px;
-}
-
-.topnav_links .search_icon span,
-.topnav_links .basket span {
-  margin-left: 10px;
-  font-size: 13px;
-}
-
-.topnav_links .dropdown,
-.topnav_links .search_icon {
-  display: inline-block;
-}
-
-.topnav_links .dropdown-content {
-  position: absolute;
-  background-color: #fff;
-  max-width: 100%;
-  top: 70px;
-  margin-left: -25px;
-  display: none;
-  padding-right: 50px;
-}
-
-.topnav_links .dropdown-content a {
-  display: block;
-  margin: 16px 25px;
+.dropdown:hover .dropbtn {
   color: #000;
-  text-decoration: none;
-}
-
-.topnav_links .dropdown-content .dropdown-content_list {
-  display: inline-block;
-  padding: 35px 20px;
-}
-
-.topnav_links .dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.topnav_links .dropdown:hover .dropdown-content.shop_content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 50px;
-  right: 250px;
-}
-
-.topnav_links .dropdown:hover .dropdown-content.shop_content a {
-  margin: 16px 0;
-}
-
-.topnav_links .dropdown:hover .dropdown-content.shop_content h2 {
-  margin-top: 25px;
-  font-family: 'Lora', serif;
-  font-weight: 600;
-}
-
-.topnav_links .droprigth-content {
-  background-color: #fff;
-  display: none;
-  position: absolute;
-  left: 222px;
-  width: 200px;
-  margin-top: -50px;
-}
-
-.topnav_links .droprigth .post_types {
-  left: 180px;
-}
-
-.topnav_links .droprigth:hover .droprigth-content {
-  display: block;
-  -webkit-animation: drop_rigth 1s forwards;
-          animation: drop_rigth 1s forwards;
-}
-
-@media screen and (max-width: 1600px) {
-  .topnav {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    padding: 0 70px;
-  }
-}
-
-.dropdown-content {
-  max-height: 0;
 }
 
 .dropdown:hover .dropdown-content {
-  -webkit-animation: drop 1s forwards;
-          animation: drop 1s forwards;
+  display: block;
 }
 
-.dropdown:hover .dropdown-content a,
-.dropdown:hover .dropdown-content h2 {
-  -webkit-animation: drop_text 2s forwards;
-          animation: drop_text 2s forwards;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
-@-webkit-keyframes drop {
-  from {
-    max-height: 0;
-  }
-  to {
-    max-height: 700px;
-  }
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
-@keyframes drop {
-  from {
-    max-height: 0;
-  }
-  to {
-    max-height: 700px;
-  }
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-@-webkit-keyframes dropdown {
-  from {
-    max-height: 0;
-    opacity: 0;
-  }
-  to {
-    max-height: 700px;
-    opacity: 1;
-  }
-}
-
-@keyframes dropdown {
-  from {
-    max-height: 0;
-    opacity: 0;
-  }
-  to {
-    max-height: 700px;
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes drop_text {
-  from {
-    color: #0000;
-  }
-  to {
-    color: #000;
-  }
-}
-
-@keyframes drop_text {
-  from {
-    color: #0000;
-  }
-  to {
-    color: #000;
-  }
-}
-
-@-webkit-keyframes drop_rigth {
-  from {
-    background-color: #0000;
-  }
-  to {
-    background-color: #fff;
-  }
-}
-
-@keyframes drop_rigth {
-  from {
-    background-color: #0000;
-  }
-  to {
-    background-color: #fff;
-  }
-}
-
-@media screen and (max-width: 1220px) {
-  .topnav {
-    padding: 20px;
-  }
-  .topnav .nav_drop {
-    display: block;
-    margin-right: 40px;
-  }
-  .topnav .topnav_logo {
-    margin-left: 40px;
-  }
-  .topnav .dropdown,
-  .topnav .basket,
-  .topnav .search_icon {
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
     display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {
+    float: none;
+  }
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown-content {
+    position: relative;
   }
 }
 
