--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -3,216 +3,112 @@ body{
 }
 
 .topnav {
-    position: relative;
-    z-index: 1;
-    font-size: 13px;
-    font-weight: 500;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-
-    .topnav_logo {
-        width: 212px;
-        height: 30px;
-
-        img {
-            max-width: 100%;
-        }
-    }
-
-    &_links {
-        .nav_drop {
-            border: none;
-            outline: none;
-            background-color: #fff;
-            font-size: 20px;
-            color: rgb(107, 107, 107);
-            display: none;
-        }
-
-        .dropdown,
-        .search_icon,
-        .basket {
-            padding: 50px 25px;
-            display: inline-block;
-
-            a {
-                text-decoration: none;
-                color: rgb(107, 107, 107);
-            }
-        }
-
-        .search_icon,
-        .basket {
-            font-size: 16px;
-
-            span {
-                margin-left: 10px;
-                font-size: 13px;
-            }
-        }
-
-        .dropdown,
-        .search_icon {
-            display: inline-block;
-        }
-
-        .dropdown-content {
-            position: absolute;
-            background-color: #fff;
-            max-width: 100%;
-            top: 70px;
-            margin-left: -25px;
-            display: none;
-            padding-right: 50px;
-
-            a {
-                display: block;
-                margin: 16px 25px;
-                color: #000;
-                text-decoration: none;
-            }
-
-            .dropdown-content_list {
-                display: inline-block;
-                padding: 35px 20px;
-            }
-        }
-
-        .dropdown {
-            &:hover {
-                .dropdown-content {
-                    display: block;
-                }
-
-                .dropdown-content.shop_content {
-                    display: flex;
-                    gap: 50px;
-                    right: 250px;
-
-                    a {
-                        margin: 16px 0;
-                    }
-
-                    h2 {
-                        margin-top: 25px;
-                        font-family: 'Lora', serif;
-                        font-weight: 600;
-                    }
-                }
-            }
-        }
-
-        .droprigth {
-            &-content {
-                background-color: #fff;
-                display: none;
-                position: absolute;
-                left: 222px;
-                width: 200px;
-                margin-top: -50px;
-            }
-
-            .post_types {
-                left: 180px;
-            }
-
-            &:hover {
-                .droprigth-content {
-                    display: block;
-                    animation: drop_rigth 1s forwards;
-                }
-            }
-        }
-    }
-
+	overflow: hidden;
+	a {
+		float: right;
+		display: block;
+		color: #D6CFD1;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+		font-size: 17px;
+        transition: color 0.5s;
+		&:hover {
+			color: #000;
+		}
+	}
+	.active {
+		color: #000;
+	}
+	.icon {
+		display: none;
+	}
 }
-
-@media screen and (max-width:1600px) {
-    .topnav {
-        justify-content: space-between;
-        padding: 0 70px;
-    }
+.dropdown {
+	float: right;
+	overflow: hidden;
+	.dropbtn {
+		font-size: 17px;
+		border: none;
+		outline: none;
+		color: #D6CFD1;
+		padding: 14px 16px;
+		background-color: inherit;
+		font-family: inherit;
+		margin: 0;
+	}
+	&:hover {
+		.dropbtn {
+			color: #000;
+		}
+		.dropdown-content {
+			display: block;
+		}
+	}
 }
-
-
 .dropdown-content {
-    max-height: 0;
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	a {
+		float: none;
+		color: black;
+		padding: 12px 16px;
+		text-decoration: none;
+		display: block;
+		text-align: left;
+		&:hover {
+			background-color: #ddd;
+			color: black;
+		}
+	}
+}
+@media screen and (max-width: 600px) {
+	.topnav {
+		a {
+			&:not(:first-child) {
+				display: none;
+			}
+		}
+		a.icon {
+			float: right;
+			display: block;
+		}
+	}
+	.dropdown {
+		.dropbtn {
+			display: none;
+		}
+	}
+	.topnav.responsive {
+		position: relative;
+		.icon {
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+		a {
+			float: none;
+			display: block;
+			text-align: left;
+		}
+		.dropdown {
+			float: none;
+			.dropbtn {
+				display: block;
+				width: 100%;
+				text-align: left;
+			}
+		}
+		.dropdown-content {
+			position: relative;
+		}
+	}
 }
 
-.dropdown:hover .dropdown-content {
-    animation: drop 1s forwards;
-
-    a,
-    h2 {
-        animation: drop_text 2s forwards;
-    }
-}
-
-@keyframes drop {
-    from {
-        max-height: 0;
-    }
-
-    to {
-        max-height: 700px;
-    }
-}
-
-@keyframes dropdown {
-    from {
-        max-height: 0;
-        opacity: 0;
-    }
-
-    to {
-        max-height: 700px;
-        opacity: 1;
-    }
-}
-
-@keyframes drop_text {
-    from {
-        color: #0000;
-    }
-
-    to {
-        color: #000;
-    }
-}
-
-@keyframes drop_rigth {
-    from {
-        background-color: #0000;
-    }
-
-    to {
-        background-color: #fff;
-    }
-}
-
-
-@media screen and (max-width:1220px) {
-    .topnav {
-        padding: 20px;
-
-        .nav_drop {
-            display: block;
-            margin-right: 40px;
-        }
-
-        .topnav_logo {
-            margin-left: 40px;
-        }
-
-        .dropdown,
-        .basket,
-        .search_icon {
-            display: none;
-        }
-    }
-}
 
 .sidebar {
     position: fixed;
