--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,21 +11,34 @@ body {
 
 .topnav {
   overflow: hidden;
+  padding: 25px 0;
 }
 
-.topnav a {
-  float: right;
+.topnav .logo {
+  padding: 14px 16px;
+  display: inline-block;
+}
+
+.topnav .logo a {
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.topnav .topnav_links a {
+  float: left;
   display: block;
   color: #D6CFD1;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  margin-top: 5px;
+  font-size: 14px;
   -webkit-transition: color 0.5s;
   transition: color 0.5s;
 }
 
-.topnav a:hover {
+.topnav .topnav_links a:hover {
   color: #000;
 }
 
@@ -37,13 +50,18 @@ body {
   display: none;
 }
 
-.dropdown {
+.topnav_links {
   float: right;
+}
+
+.dropdown {
+  float: left;
   overflow: hidden;
+  margin-top: 5px;
 }
 
 .dropdown .dropbtn {
-  font-size: 17px;
+  font-size: 14px;
   border: none;
   outline: none;
   color: #D6CFD1;
@@ -73,7 +91,7 @@ body {
 
 .dropdown-content a {
   float: none;
-  color: black;
+  color: red;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
