--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -4,14 +4,25 @@ body{
 
 .topnav {
 	overflow: hidden;
-	a {
-		float: right;
+    padding: 25px 0;
+    .logo{
+        padding: 14px 16px;
+        display: inline-block;
+        a{
+            text-decoration: none;
+            font-weight: 800;
+            font-size: 20px;
+        }
+    }
+	.topnav_links a {
+		float: left;
 		display: block;
 		color: #D6CFD1;
 		text-align: center;
 		padding: 14px 16px;
 		text-decoration: none;
-		font-size: 17px;
+        margin-top:5px;
+		font-size: 14px;
         transition: color 0.5s;
 		&:hover {
 			color: #000;
@@ -23,12 +34,16 @@ body{
 	.icon {
 		display: none;
 	}
+    &_links{
+        float: right;
+    }
 }
 .dropdown {
-	float: right;
+	float: left;
 	overflow: hidden;
+    margin-top:5px;
 	.dropbtn {
-		font-size: 17px;
+		font-size: 14px;
 		border: none;
 		outline: none;
 		color: #D6CFD1;
@@ -53,9 +68,9 @@ body{
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
-	a {
+	a{
 		float: none;
-		color: black;
+		color: red;
 		padding: 12px 16px;
 		text-decoration: none;
 		display: block;
