--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,8 +21,13 @@ body {
 
 .topnav .logo a {
   text-decoration: none;
-  font-weight: 800;
+  font-weight: 700;
   font-size: 20px;
+  color: black;
+}
+
+.topnav .topnav_links .active {
+  color: #000;
 }
 
 .topnav .topnav_links a {
@@ -39,10 +44,6 @@ body {
 }
 
 .topnav .topnav_links a:hover {
-  color: #000;
-}
-
-.topnav .active {
   color: #000;
 }
 
@@ -79,28 +80,29 @@ body {
   display: block;
 }
 
-.dropdown-content {
+.topnav_links .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
+  background-color: #000;
+  border-radius: 5px;
+  padding: 10px;
+  min-width: 100px;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
-.dropdown-content a {
+.topnav_links .dropdown-content a {
   float: none;
-  color: red;
-  padding: 12px 16px;
+  color: #8b8b8b;
+  padding: 5px;
   text-decoration: none;
   display: block;
   text-align: left;
 }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
+.topnav_links .dropdown-content a:hover {
+  color: #ddd;
 }
 
 @media screen and (max-width: 600px) {
