--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -10,8 +10,14 @@ body{
         display: inline-block;
         a{
             text-decoration: none;
-            font-weight: 800;
+            font-weight: 700;
             font-size: 20px;
+            color: black;
+        }
+    }
+    .topnav_links{
+        .active {
+            color: #000;
         }
     }
 	.topnav_links a {
@@ -27,9 +33,6 @@ body{
 		&:hover {
 			color: #000;
 		}
-	}
-	.active {
-		color: #000;
 	}
 	.icon {
 		display: none;
@@ -61,23 +64,24 @@ body{
 		}
 	}
 }
-.dropdown-content {
+.topnav_links .dropdown-content {
 	display: none;
 	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
+	background-color: #000;
+    border-radius: 5px;
+    padding: 10px;
+	min-width: 100px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
 	a{
 		float: none;
-		color: red;
-		padding: 12px 16px;
+		color: #8b8b8b;
+		padding: 5px;
 		text-decoration: none;
 		display: block;
 		text-align: left;
 		&:hover {
-			background-color: #ddd;
-			color: black;
+			color: #ddd;
 		}
 	}
 }
