--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,13 +9,27 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+::-moz-selection {
+  color: #fff;
+  background: #52D681;
+}
+
+::selection {
+  color: #fff;
+  background: #52D681;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .topnav {
-  overflow: hidden;
   padding: 25px 0;
 }
 
 .topnav .logo {
-  padding: 14px 16px;
+  padding: 16px 16px;
   display: inline-block;
 }
 
@@ -49,6 +63,11 @@ body {
 
 .topnav .icon {
   display: none;
+  position: absolute;
+  top: 40px;
+  right: 25px;
+  text-decoration: none;
+  color: #000;
 }
 
 .topnav_links {
@@ -57,7 +76,7 @@ body {
 
 .dropdown {
   float: left;
-  overflow: hidden;
+  position: relative;
   margin-top: 5px;
 }
 
@@ -78,12 +97,15 @@ body {
 
 .dropdown:hover .dropdown-content {
   display: block;
+  -webkit-animation: dropdown 0.5s forwards;
+          animation: dropdown 0.5s forwards;
 }
 
 .topnav_links .dropdown-content {
   display: none;
   position: absolute;
   background-color: #000;
+  top: 50px;
   border-radius: 5px;
   padding: 10px;
   min-width: 100px;
@@ -105,8 +127,8 @@ body {
   color: #ddd;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
+@media screen and (max-width: 785px) {
+  .topnav .topnav_links a {
     display: none;
   }
   .topnav a.icon {
@@ -116,35 +138,33 @@ body {
   .dropdown .dropbtn {
     display: none;
   }
-  .topnav.responsive {
-    position: relative;
+}
+
+@-webkit-keyframes dropdown {
+  from {
+    opacity: 0;
+    top: 70px;
   }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+  to {
+    opacity: 1;
+    top: 40px;
   }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+}
+
+@keyframes dropdown {
+  from {
+    opacity: 0;
+    top: 70px;
   }
-  .topnav.responsive .dropdown {
-    float: none;
-  }
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown-content {
-    position: relative;
+  to {
+    opacity: 1;
+    top: 40px;
   }
 }
 
 .sidebar {
   position: fixed;
-  background-color: #fff;
+  background-color: #000;
   z-index: 100;
   max-width: 420px;
   width: 100%;
@@ -163,7 +183,7 @@ body {
   margin: 16px 25px;
   text-decoration: none;
   font-size: 13px;
-  color: #000;
+  color: #9e9e9e;
 }
 
 .sidebar .side-dropdown .side-dropdown-content {
@@ -188,15 +208,15 @@ body {
 }
 
 .sidebar .side-dropdown .side-dropdown-content.opened {
-  -webkit-animation: dropdown 1s forwards;
-          animation: dropdown 1s forwards;
+  -webkit-animation: dropdown_c 1s forwards;
+          animation: dropdown_c 1s forwards;
   display: block;
 }
 
 .sidebar .side-dropdown .sub_side-dropdown-content.opened {
   display: block;
-  -webkit-animation: dropdown 1s forwards;
-          animation: dropdown 1s forwards;
+  -webkit-animation: dropdown_c 1s forwards;
+          animation: dropdown_c 1s forwards;
 }
 
 @-webkit-keyframes side {
@@ -262,6 +282,46 @@ body {
 @media screen and (min-width: 1220px) {
   #sidebar {
     display: none;
+  }
+}
+
+@-webkit-keyframes drop {
+  from {
+    max-height: 0;
+  }
+  to {
+    max-height: 700px;
+  }
+}
+
+@keyframes drop {
+  from {
+    max-height: 0;
+  }
+  to {
+    max-height: 700px;
+  }
+}
+
+@-webkit-keyframes dropdown_c {
+  from {
+    max-height: 0;
+    opacity: 0;
+  }
+  to {
+    max-height: 700px;
+    opacity: 1;
+  }
+}
+
+@keyframes dropdown_c {
+  from {
+    max-height: 0;
+    opacity: 0;
+  }
+  to {
+    max-height: 700px;
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=main.css.map */
