--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -2,11 +2,20 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+::selection {
+    color: #fff;
+    background: #52D681;
+  }
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 .topnav {
-	overflow: hidden;
     padding: 25px 0;
     .logo{
-        padding: 14px 16px;
+        padding: 16px 16px;
         display: inline-block;
         a{
             text-decoration: none;
@@ -36,6 +45,11 @@ body{
 	}
 	.icon {
 		display: none;
+        position: absolute;
+        top: 40px;
+        right: 25px;
+        text-decoration: none;
+        color:#000;
 	}
     &_links{
         float: right;
@@ -43,7 +57,7 @@ body{
 }
 .dropdown {
 	float: left;
-	overflow: hidden;
+    position: relative;
     margin-top:5px;
 	.dropbtn {
 		font-size: 14px;
@@ -61,6 +75,7 @@ body{
 		}
 		.dropdown-content {
 			display: block;
+            animation: dropdown 0.5s forwards;
 		}
 	}
 }
@@ -68,6 +83,7 @@ body{
 	display: none;
 	position: absolute;
 	background-color: #000;
+    top: 50px;
     border-radius: 5px;
     padding: 10px;
 	min-width: 100px;
@@ -85,12 +101,10 @@ body{
 		}
 	}
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 785px) {
 	.topnav {
-		a {
-			&:not(:first-child) {
-				display: none;
-			}
+		.topnav_links a {
+		    display: none;
 		}
 		a.icon {
 			float: right;
@@ -102,36 +116,24 @@ body{
 			display: none;
 		}
 	}
-	.topnav.responsive {
-		position: relative;
-		.icon {
-			position: absolute;
-			right: 0;
-			top: 0;
-		}
-		a {
-			float: none;
-			display: block;
-			text-align: left;
-		}
-		.dropdown {
-			float: none;
-			.dropbtn {
-				display: block;
-				width: 100%;
-				text-align: left;
-			}
-		}
-		.dropdown-content {
-			position: relative;
-		}
-	}
+	
+}
+
+@keyframes dropdown {
+    from{
+        opacity: 0;
+        top: 70px;
+    }
+    to{
+        opacity: 1;
+        top: 40px;
+    }
 }
 
 
 .sidebar {
     position: fixed;
-    background-color: #fff;
+    background-color: #000;
     z-index: 100;
     max-width: 420px;
     width: 100%;
@@ -148,7 +150,7 @@ body{
             margin: 16px 25px;
             text-decoration: none;
             font-size: 13px;
-            color: #000;
+            color: rgb(158, 158, 158);
         }
 
         .side-dropdown-content {
@@ -173,13 +175,13 @@ body{
         }
 
         .side-dropdown-content.opened {
-            animation: dropdown 1s forwards;
+            animation: dropdown_c 1s forwards;
             display: block;
         }
 
         .sub_side-dropdown-content.opened {
             display: block;
-            animation: dropdown 1s forwards;
+            animation: dropdown_c 1s forwards;
         }
 
     }
@@ -231,5 +233,27 @@ body{
 @media screen and (min-width:1220px) {
     #sidebar {
         display: none;
+    }
+}
+
+@keyframes drop {
+    from {
+        max-height: 0;
+    }
+
+    to {
+        max-height: 700px;
+    }
+}
+
+@keyframes dropdown_c {
+    from {
+        max-height: 0;
+        opacity: 0;
+    }
+
+    to {
+        max-height: 700px;
+        opacity: 1;
     }
 }
