--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -7,7 +7,7 @@ body{
     background: #52D681;
   }
 
-.container{
+.custom_container{
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -43,13 +43,14 @@ body{
 			color: #000;
 		}
 	}
-	.icon {
+	a.icon{
 		display: none;
         position: absolute;
-        top: 40px;
+        top: 30px;
         right: 25px;
         text-decoration: none;
         color:#000;
+        font-size: 25px;
 	}
     &_links{
         float: right;
@@ -103,12 +104,15 @@ body{
 }
 @media screen and (max-width: 785px) {
 	.topnav {
+        padding: 0;
+        border-bottom: 1px solid black;
 		.topnav_links a {
 		    display: none;
 		}
 		a.icon {
 			float: right;
 			display: block;
+            top: 10px;
 		}
 	}
 	.dropdown {
@@ -256,4 +260,8 @@ body{
         max-height: 700px;
         opacity: 1;
     }
+}
+
+#slider{
+    max-height: 100px;
 }
