--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -332,6 +332,28 @@ body {
 }
 
 #slider {
-  max-height: 100px;
+  padding: 0 25px;
+}
+
+#slider .slider-item {
+  margin: 0 auto;
+  max-height: 620px;
+}
+
+#slider .slider-item img {
+  width: 100%;
+}
+
+#slider .slider-item h2 {
+  position: absolute;
+  bottom: 10px;
+  margin-left: 20px;
+  color: #fff;
+  font-weight: 400;
+  font-size: 25px;
+}
+
+.work_title {
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
