--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -355,5 +355,41 @@ body {
 
 .work_title {
   text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.work_title h2 {
+  font-size: 40px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.work_title p {
+  font-size: 18px;
+  color: #868686;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.work_cards {
+  margin-top: 50px;
+}
+
+.work_cards-item {
+  width: 500px;
+  margin: 10px 20px;
+}
+
+.work_cards-item img {
+  width: 100%;
+}
+
+.work_cards-item h3 {
+  font-size: 22px;
+}
+
+.work_cards-item p {
+  color: #747474;
 }
 /*# sourceMappingURL=main.css.map */
