--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -356,7 +356,7 @@ body {
 .work_title {
   text-align: center;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 50px auto;
 }
 
 .work_title h2 {
@@ -391,5 +391,104 @@ body {
 
 .work_cards-item p {
   color: #747474;
+}
+
+.news-item {
+  max-width: 550px;
+  margin-bottom: 50px;
+}
+
+.news-item:hover h2 {
+  color: #000;
+}
+
+.news-item h4 {
+  color: #bebebe;
+  font-size: 13px;
+  text-transform: uppercase;
+}
+
+.news-item h2 {
+  color: #52D681;
+  font-weight: 400;
+  font-size: 25px;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+}
+
+.news-item p {
+  color: #838383;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.news-item a:hover {
+  text-decoration: none;
+}
+
+.news button {
+  background-color: #52D681;
+  border: none;
+  color: #2F9051;
+  font-weight: 700;
+  font-size: 16px;
+  padding: 10px 25px;
+  -webkit-transition: color 0.7s;
+  transition: color 0.7s;
+}
+
+.news button:hover {
+  color: #fff;
+}
+
+.news .news_title {
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+.news_summary {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 25px;
+  margin-top: 100px;
+}
+
+.testimonials {
+  max-width: 450px;
+}
+
+.testimonials h3 {
+  font-size: 18px;
+  font-style: oblique;
+  margin-top: 30px;
+  line-height: 1.5;
+}
+
+.testimonials h5 {
+  font-style: italic;
+  margin-top: 20px;
+  color: #9c9c9c;
+}
+
+@media screen and (max-width: 1046px) {
+  .news_summary {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .testimonials {
+    max-width: 100%;
+  }
+  .news-item {
+    max-width: 100%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
