--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,134 +1,153 @@
-body{
+body {
     font-family: 'Montserrat', sans-serif;
 }
 
 ::selection {
     color: #fff;
     background: #52D681;
-  }
+}
 
-.custom_container{
+.custom_container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
 .topnav {
     padding: 25px 0;
-    .logo{
+
+    .logo {
         padding: 16px 16px;
         display: inline-block;
-        a{
+
+        a {
             text-decoration: none;
             font-weight: 700;
             font-size: 20px;
             color: black;
         }
     }
-    .topnav_links{
+
+    .topnav_links {
         .active {
             color: #000;
         }
     }
-	.topnav_links a {
-		float: left;
-		display: block;
-		color: #D6CFD1;
-		text-align: center;
-		padding: 14px 16px;
-		text-decoration: none;
-        margin-top:5px;
-		font-size: 14px;
+
+    .topnav_links a {
+        float: left;
+        display: block;
+        color: #D6CFD1;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        margin-top: 5px;
+        font-size: 14px;
         transition: color 0.5s;
-		&:hover {
-			color: #000;
-		}
-	}
-	a.icon{
-		display: none;
+
+        &:hover {
+            color: #000;
+        }
+    }
+
+    a.icon {
+        display: none;
         position: absolute;
         top: 30px;
         right: 25px;
         text-decoration: none;
-        color:#000;
+        color: #000;
         font-size: 25px;
-	}
-    &_links{
+    }
+
+    &_links {
         float: right;
     }
 }
+
 .dropdown {
-	float: left;
+    float: left;
     position: relative;
-    margin-top:5px;
-	.dropbtn {
-		font-size: 14px;
-		border: none;
-		outline: none;
-		color: #D6CFD1;
-		padding: 14px 16px;
-		background-color: inherit;
-		font-family: inherit;
-		margin: 0;
-	}
-	&:hover {
-		.dropbtn {
-			color: #000;
-		}
-		.dropdown-content {
-			display: block;
+    margin-top: 5px;
+
+    .dropbtn {
+        font-size: 14px;
+        border: none;
+        outline: none;
+        color: #D6CFD1;
+        padding: 14px 16px;
+        background-color: inherit;
+        font-family: inherit;
+        margin: 0;
+    }
+
+    &:hover {
+        .dropbtn {
+            color: #000;
+        }
+
+        .dropdown-content {
+            display: block;
             animation: dropdown 0.5s forwards;
-		}
-	}
+        }
+    }
 }
+
 .topnav_links .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #000;
+    display: none;
+    position: absolute;
+    background-color: #000;
     top: 50px;
     border-radius: 5px;
     padding: 10px;
-	min-width: 100px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-	a{
-		float: none;
-		color: #8b8b8b;
-		padding: 5px;
-		text-decoration: none;
-		display: block;
-		text-align: left;
-		&:hover {
-			color: #ddd;
-		}
-	}
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+
+    a {
+        float: none;
+        color: #8b8b8b;
+        padding: 5px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+
+        &:hover {
+            color: #ddd;
+        }
+    }
 }
+
 @media screen and (max-width: 785px) {
-	.topnav {
+    .topnav {
         padding: 0;
         border-bottom: 1px solid black;
-		.topnav_links a {
-		    display: none;
-		}
-		a.icon {
-			float: right;
-			display: block;
+
+        .topnav_links a {
+            display: none;
+        }
+
+        a.icon {
+            float: right;
+            display: block;
             top: 10px;
-		}
-	}
-	.dropdown {
-		.dropbtn {
-			display: none;
-		}
-	}
-	
+        }
+    }
+
+    .dropdown {
+        .dropbtn {
+            display: none;
+        }
+    }
+
 }
 
 @keyframes dropdown {
-    from{
+    from {
         opacity: 0;
         top: 70px;
     }
-    to{
+
+    to {
         opacity: 1;
         top: 40px;
     }
@@ -262,15 +281,18 @@ body{
     }
 }
 
-#slider{
+#slider {
     padding: 0 25px;
-    .slider-item{
+
+    .slider-item {
         margin: 0 auto;
         max-height: 620px;
-        img{
+
+        img {
             width: 100%;
         }
-        h2{
+
+        h2 {
             position: absolute;
             bottom: 10px;
             margin-left: 20px;
@@ -281,16 +303,18 @@ body{
     }
 }
 
-.work_title{
+.work_title {
     text-align: center;
     max-width: 800px;
-    margin: 0 auto;
-    h2{
+    margin: 50px auto;
+
+    h2 {
         font-size: 40px;
         font-weight: 400;
         margin-bottom: 20px;
     }
-    p{
+
+    p {
         font-size: 18px;
         color: rgb(134, 134, 134);
         font-weight: 500;
@@ -298,20 +322,105 @@ body{
     }
 }
 
-.work_cards{
+.work_cards {
     margin-top: 50px;
 }
 
-.work_cards-item{
+.work_cards-item {
     width: 500px;
     margin: 10px 20px;
-    img{
-        width:100%;
+
+    img {
+        width: 100%;
     }
-    h3{
+
+    h3 {
         font-size: 22px;
     }
-    p{
+
+    p {
         color: rgb(116, 116, 116);
+    }
+}
+
+.news-item {
+    &:hover h2{
+        color: #000;
+    }
+    max-width: 550px;
+    margin-bottom: 50px;
+    h4 {
+        color: rgb(190, 190, 190);
+        font-size: 13px;
+        text-transform: uppercase;
+    }
+    h2{
+        color: #52D681;
+        font-weight: 400;
+        font-size: 25px;
+        transition: color 0.5s;
+    }
+    p{
+        color: rgb(131, 131, 131);
+        font-size: 13px;
+        font-weight: 600;
+    }
+
+    a:hover {
+        text-decoration: none;
+    }
+}
+
+.news{
+    button{
+        background-color: #52D681;
+        border: none;
+        color: #2F9051;
+        font-weight: 700;
+        font-size: 16px;
+        padding: 10px 25px;
+        transition: color 0.7s;
+        &:hover{
+            color: #fff;
+        }
+    }
+    .news_title{
+        font-weight: 500;
+        margin-bottom: 30px;
+    }
+}
+
+.news_summary{
+    display: flex;
+    flex-flow:row wrap;
+    justify-content: space-between;
+    padding: 0 25px;
+    margin-top: 100px;
+}
+
+.testimonials{
+    max-width: 450px;
+    h3{
+        font-size: 18px;
+        font-style: oblique;
+        margin-top: 30px;
+        line-height: 1.5;
+    }
+    h5{
+        font-style: italic;
+        margin-top: 20px;
+        color: rgb(156, 156, 156);
+    }
+}
+
+@media screen and (max-width:1046px) {
+    .news_summary{
+        justify-content:start;
+    }
+    .testimonials{
+        max-width: 100%;
+    }
+    .news-item{
+        max-width: 100%;
     }
 }
