--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -491,4 +491,222 @@ body {
     max-width: 100%;
   }
 }
+
+#News {
+  border-bottom: 1px solid #d4d4d4;
+  padding-bottom: 50px;
+}
+
+.features {
+  padding: 50px 25px;
+}
+
+.features-item {
+  margin-bottom: 20px;
+}
+
+.features-item i {
+  font-size: 35px;
+  color: #b4b4b4;
+  position: absolute;
+  top: -48px;
+}
+
+.features-item .features_icon {
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  position: relative;
+}
+
+.features-item .features_text {
+  display: inline-block;
+  max-width: 300px;
+}
+
+.features-item .features_text h5 {
+  line-height: 1.6;
+  color: #646464;
+}
+
+.features-item .features_text h4 {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.features-item .features_text a {
+  color: #52D681;
+  font-size: 12px;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+  font-weight: 500;
+}
+
+.features-item .features_text a:hover {
+  color: #000;
+  text-decoration: none;
+}
+
+.features {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto auto;
+      grid-template-columns: auto auto auto;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media screen and (max-width: 1112px) {
+  .features {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .features-item .features_text {
+    max-width: 100%;
+  }
+  .features-item i {
+    top: -20px;
+  }
+}
+
+.upper_footer {
+  background-color: #262626;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  color: #fff;
+}
+
+.upper_footer li {
+  list-style: none;
+}
+
+.footer_context {
+  display: -ms-grid;
+  display: grid;
+  gap: 20px;
+  padding: 0 25px;
+  -ms-grid-columns: auto auto auto auto;
+      grid-template-columns: auto auto auto auto;
+}
+
+.footer_summary {
+  width: 350px;
+}
+
+.footer_summary h2 {
+  font-size: 25px;
+}
+
+.footer_summary h4 {
+  color: #666666;
+  font-size: 14px;
+  line-height: 1.4;
+}
+
+.footer_links h2 {
+  font-size: 25px;
+}
+
+.footer_links li {
+  margin-bottom: 5px;
+}
+
+.footer_links a {
+  color: #52D681;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+}
+
+.footer_links a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer_work h2 {
+  font-size: 25px;
+}
+
+.footer_work li {
+  margin-bottom: 5px;
+}
+
+.footer_work a {
+  color: #52D681;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+}
+
+.footer_work a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+form input {
+  border: none;
+  outline: none;
+  width: 250px;
+  padding: 0 25px;
+  display: block;
+  height: 50px;
+  margin-top: 25px;
+  border-radius: 5px;
+  color: #000;
+}
+
+form button {
+  padding: 15px 18px;
+  background-color: #52D681;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+
+@media screen and (max-width: 992px) {
+  .footer_context {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+  }
+  form input {
+    width: 100%;
+  }
+}
+
+.footer_below {
+  background-color: #1A1A1A;
+  color: #747474;
+  padding: 20px 0;
+  font-size: 12px;
+}
+
+.designed_by span {
+  color: #52D681;
+  cursor: pointer;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+}
+
+.designed_by span:hover {
+  color: #fff;
+}
+
+.below_context {
+  padding: 0 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 /*# sourceMappingURL=main.css.map */
